# ai-singing-pipeline

./: .gitignore  .gitmodules  Cargo.toml  README.en.md  README.md  build.rs
scripts/: pitch_correct.praat
src/: align.rs  audio.rs  denoise.rs  lib.rs  main.rs  mix.rs  pitch_correct.rs  world.rs  world_sys.rs
src/dsp/: compressor.rs  dynamics.rs  filters.rs  gate.rs  mod.rs  wsola.rs
